@@ -1,4 +1,4 @@
-@set UPDATED 8 November 2017
-@set UPDATED-MONTH November 2017
-@set EDITION 1.3.12
-@set VERSION 1.3.12
+@set UPDATED 19 May 2018
+@set UPDATED-MONTH May 2018
+@set EDITION 1.3.13
+@set VERSION 1.3.13
